--- a/download.html
+++ b/download.html
@@ -2,19 +2,38 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Download Application</title>
+  <title>Access Key Download</title>
 </head>
 
-<body style="font-family: Arial; text-align:center; margin-top:60px;">
+<body style="font-family: Arial; margin:20px; text-align:center;">
 
-<h2>📲 Download Application</h2>
+<h2>🎥 Video Guide</h2>
 
-<p>Access Key 24 hours ke liye valid hoti hai.</p>
+<iframe 
+  src="https://drive.google.com/drive/folders/1kCxMfgZZ1c47iw4A5FclRL2qs4CLByRH"
+  width="95%" 
+  height="240" 
+  allow="autoplay"
+  allowfullscreen
+  style="border-radius:10px;">
+</iframe>
+
+<hr style="margin:35px 0;">
+
+<h2>📲 Download Application (APK)</h2>
+
+<p>Application install karne ke liye niche button par click karein.</p>
 
 <a href="https://drive.google.com/uc?export=download&id=1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T"
-   style="display:inline-block; padding:12px 20px; background:#0a58ca; color:white; text-decoration:none; border-radius:6px;">
-👉 Download App
+   download
+   style="display:inline-block; padding:14px 26px; background:#0a58ca;
+   color:white; text-decoration:none; border-radius:8px; font-size:16px;">
+⬇ Download App
 </a>
+
+<p style="margin-top:15px; font-size:13px;">
+⚠️ App sirf Android devices ke liye hai
+</p>
 
 </body>
 </html>
