--- a/download.html
+++ b/download.html
@@ -7,6 +7,7 @@
 
 <body style="font-family: Arial; margin:20px; text-align:center;">
 
+<!-- ================= VIDEO SECTION ================= -->
 <h2>🎥 Video Guide</h2>
 
 <iframe
@@ -15,24 +16,41 @@
   height="240"
   allow="autoplay"
   allowfullscreen
-  style="border-radius:10px;">
+  style="border-radius:10px; border:1px solid #ccc;">
 </iframe>
+
+<p style="font-size:13px; color:#555; margin-top:6px;">
+⬆ Ye sirf video guide hai (download se koi relation nahi)
+</p>
 
 <hr style="margin:35px 0;">
 
+<!-- ================= APK DOWNLOAD SECTION ================= -->
 <h2>📲 Download Application (APK)</h2>
 
-<p>Application install karne ke liye niche button par click karein.</p>
+<p>
+⚠️ Application download karne ke liye <b>sirf niche wale button</b> par click karein
+</p>
 
-<a href="https://drive.google.com/uc?export=download&id=1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T"
-   download
-   style="display:inline-block; padding:14px 26px; background:#0a58ca;
-   color:white; text-decoration:none; border-radius:8px; font-size:16px;">
-⬇ Download App
+<a
+  href="https://drive.google.com/uc?export=download&id=APK_FILE_ID_HERE"
+  download
+  target="_blank"
+  style="
+    display:inline-block;
+    padding:14px 28px;
+    background:#0a58ca;
+    color:white;
+    text-decoration:none;
+    border-radius:8px;
+    font-size:16px;
+    font-weight:bold;
+  ">
+⬇ Download App (APK)
 </a>
 
 <p style="margin-top:15px; font-size:13px;">
-⚠️ App sirf Android devices ke liye hai
+⚠ App sirf Android devices ke liye hai
 </p>
 
 </body>
