--- a/download.html
+++ b/download.html
@@ -11,7 +11,7 @@
 <h2>🎥 Video Guide</h2>
 
 <iframe
-  src="https://drive.google.com/file/d/VIDEO_ID_HERE/preview"
+  src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/view?usp=drivesdk"
   width="95%"
   height="240"
   allow="autoplay"
@@ -33,7 +33,7 @@
 </p>
 
 <a
-  href="https://drive.google.com/uc?export=download&id=APK_FILE_ID_HERE"
+  href="https://https://drive.google.com/file/d/1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH/view?usp=drivesdk"
   download
   target="_blank"
   style="
