--- a/download.html
+++ b/download.html
@@ -5,53 +5,57 @@
   <title>Access Key Download</title>
 </head>
 
-<body style="font-family: Arial; margin:20px; text-align:center;">
+<body style="font-family:Arial; margin:20px; text-align:center;">
 
-<!-- ================= VIDEO SECTION ================= -->
-<h2>🎥 Video Guide</h2>
+  <!-- ================= VIDEO SECTION ================= -->
+  <h2>🎥 Video Guide</h2>
 
-<iframe
-  src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/view?usp=drivesdk"
-  width="95%"
-  height="240"
-  allow="autoplay"
-  allowfullscreen
-  style="border-radius:10px; border:1px solid #ccc;">
-</iframe>
+  <!-- 🔴 YAHAN SIRF VIDEO ID DAALNI HAI -->
+  <!-- Example: https://drive.google.com/file/d/VIDEO_ID/view -->
+  <iframe
+    src="https://drive.google.com/file/d/1AbCdEf123/preview"
+    width="95%"
+    height="240"
+    allow="autoplay"
+    allowfullscreen
+    style="border-radius:10px; border:1px solid #ccc;">
+  </iframe>
 
-<p style="font-size:13px; color:#555; margin-top:6px;">
-⬆ Ye sirf video guide hai (download se koi relation nahi)
-</p>
+  <p style="font-size:13px; color:#555; margin-top:6px;">
+    ℹ️ Ye video sirf guide ke liye hai (download se koi relation nahi)
+  </p>
 
-<hr style="margin:35px 0;">
+  <hr style="margin:35px 0;">
 
-<!-- ================= APK DOWNLOAD SECTION ================= -->
-<h2>📲 Download Application (APK)</h2>
+  <!-- ================= APK DOWNLOAD SECTION ================= -->
+  <h2>📦 Download Application (APK)</h2>
 
-<p>
-⚠️ Application download karne ke liye <b>sirf niche wale button</b> par click karein
-</p>
+  <p>
+    ⚠️ Application download karne ke liye niche button par click karein
+  </p>
 
-<a
-  href="https://https://drive.google.com/file/d/1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH/view?usp=drivesdk"
-  download
-  target="_blank"
-  style="
-    display:inline-block;
-    padding:14px 28px;
-    background:#0a58ca;
-    color:white;
-    text-decoration:none;
-    border-radius:8px;
-    font-size:16px;
-    font-weight:bold;
-  ">
-⬇ Download App (APK)
-</a>
+  
+  <!-- Example: https://drive.google.com/file/d/9XyZApk789/view -->
+  <a
+    href="https://drive.google.com/uc?export=download&id=9XyZApk789"
+    download
+    target="_blank"
+    style="
+      display:inline-block;
+      padding:14px 28px;
+      background:#0a58ca;
+      color:white;
+      text-decoration:none;
+      border-radius:8px;
+      font-size:16px;
+      font-weight:bold;
+    ">
+    ⬇ Download App (APK)
+  </a>
 
-<p style="margin-top:15px; font-size:13px;">
-⚠ App sirf Android devices ke liye hai
-</p>
+  <p style="margin-top:15px; font-size:13px;">
+    ⚠️ App sirf Android devices ke liye hai
+  </p>
 
 </body>
 </html>
