--- a/download.html
+++ b/download.html
@@ -5,40 +5,35 @@
   <title>Access Key Download</title>
 </head>
 
-<body style="font-family:Arial; margin:20px; text-align:center;">
+<body style="font-family:Arial; text-align:center; margin:20px;">
 
-  <!-- ================= VIDEO SECTION ================= -->
   <h2>🎥 Video Guide</h2>
 
   <!-- 🔴 YAHAN SIRF VIDEO ID DAALNI HAI -->
-  <!-- Example: https://drive.google.com/file/d/VIDEO_ID/view -->
   <iframe
-    src="https://drive.google.com/file/d/1AbCdEf123/preview"
+    src="https://drive.google.com/file/d/1We5gjl7d5t9Z9OfYAFObuuIX3tY5a_9T/preview"
     width="95%"
     height="240"
     allow="autoplay"
     allowfullscreen
-    style="border-radius:10px; border:1px solid #ccc;">
+    style="border:1px solid #ccc; border-radius:10px;">
   </iframe>
 
-  <p style="font-size:13px; color:#555; margin-top:6px;">
-    ℹ️ Ye video sirf guide ke liye hai (download se koi relation nahi)
+  <p style="font-size:13px;color:#555;">
+    Ye video sirf guide ke liye hai (download se koi relation nahi)
   </p>
 
-  <hr style="margin:35px 0;">
+  <hr style="margin:30px 0;">
 
-  <!-- ================= APK DOWNLOAD SECTION ================= -->
   <h2>📦 Download Application (APK)</h2>
 
   <p>
-    ⚠️ Application download karne ke liye niche button par click karein
+    Application download karne ke liye niche button par click karein
   </p>
 
-  
-  <!-- Example: https://drive.google.com/file/d/9XyZApk789/view -->
+  <!-- 🔴 YAHAN SIRF APK ID DAALNI HAI -->
   <a
-    href="https://drive.google.com/uc?export=download&id=9XyZApk789"
-    download
+    href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH"
     target="_blank"
     style="
       display:inline-block;
@@ -53,8 +48,8 @@
     ⬇ Download App (APK)
   </a>
 
-  <p style="margin-top:15px; font-size:13px;">
-    ⚠️ App sirf Android devices ke liye hai
+  <p style="font-size:13px;margin-top:12px;">
+    ⚠ App sirf Android devices ke liye hai
   </p>
 
 </body>
