--- a/download.html
+++ b/download.html
@@ -32,19 +32,7 @@
   </p>
 
   <!-- 🔴 YAHAN SIRF APK ID DAALNI HAI -->
-  <a
-    href="https://drive.google.com/uc?export=download&id=1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH"
-    target="_blank"
-    style="
-      display:inline-block;
-      padding:14px 28px;
-      background:#0a58ca;
-      color:white;
-      text-decoration:none;
-      border-radius:8px;
-      font-size:16px;
-      font-weight:bold;
-    ">
+  <"1dTC01CLUktCk2BDQN1bfEglRUuvpM8sH">
     ⬇ Download App (APK)
   </a>
 
