--- a/download.html
+++ b/download.html
@@ -20,15 +20,87 @@
 <div id="content">
 
   <h2>📌 Important Steps (Dhyaan se padhein)</h2>
-  <ol style="text-align:left; max-width:600px; margin:20px auto; font-size:14px;">
-    <li>Sabse pehle niche diya gaya video poora dekhein.</li>
-    <li>Video dekhne ke baad hi application download karein.</li>
-    <li>Download ke baad Android phone me “Unknown Sources” allow karein.</li>
-    <li>App install ke baad password dobara share na karein.</li>
-    <li>Access key 24 hours ke liye hi valid hoti hai.</li>
-  </ol>
+  <h3>🔑 How to Generate Access Key (Valid for 24 Hours)</h3>
 
-  <hr style="margin:30px 0;">
+<p><b>Follow the steps carefully:</b></p>
+
+<h4>⚠️ Important Browser Note:</h4>
+<ul style="text-align:left; max-width:750px; margin:15px auto; line-height:1.7;">
+  <li>
+    Agar link kisi <b>APP</b> ke andar se open karte ho,
+    to yeh <b>Google Chrome</b> me open hoga aur ads aa sakte hain.
+  </li>
+  <li>
+    Ads avoid karne ke liye,
+    website ko <b>direct Opera Mini browser</b> me open karein (best option).
+  </li>
+  <li>
+    Agar app ya website open na ho,
+    to <b>VPN ON</b> karke dubara try karein.
+  </li>
+</ul>
+
+<h4>📌 Steps to Generate Access Key:</h4>
+
+<ol style="text-align:left; max-width:750px; margin:20px auto; line-height:1.8;">
+
+  <li>
+    <b>Turn OFF DNS</b><br>
+    Phone settings me jaakar
+    <b>Private DNS / Custom DNS</b> disable karein.
+  </li>
+
+  <li>
+    <b>Update Browser</b><br>
+    Ensure karein ki
+    <b>Google Chrome latest version</b> par update ho.
+  </li>
+
+  <li>
+    <b>Use Correct Browser</b><br>
+    • Chrome → recommended<br>
+    • Opera Mini → fewer ads (best option)
+  </li>
+
+  <li>
+    <b>If Any Extra Page / Ad Opens</b><br>
+    Sirf <b>BACK</b> button ek baar press karein aur process continue karein.
+    Access key successfully generate ho jaayegi.
+  </li>
+
+  <li>
+    <b>Laptop / PC Users</b><br>
+    • Website open karne se pehle <b>VPN ON</b> karein<br>
+    • <b>Ad-Blocker extension</b> use karein<br>
+    (Isse ads aur redirects avoid hote hain)
+  </li>
+
+</ol>
+
+<h4>⏳ Key Validity:</h4>
+<ul style="text-align:left; max-width:750px; margin:15px auto; line-height:1.7;">
+  <li>
+    Access Key sirf <b>24 hours</b> ke liye valid hoti hai.
+  </li>
+  <li>
+    24 hours ke baad,
+    dubara login karke
+    <b>same process repeat</b> karna padega.
+  </li>
+  <li>
+    Ye process <b>copyright issues avoid</b> karne ke liye hai.
+  </li>
+</ul>
+
+<p style="text-align:center; font-weight:bold; margin-top:22px;">
+🌐 Official Website:
+<a href="https://rarestudy.site" target="_blank"
+   style="color:#0a58ca; text-decoration:none;">
+rarestudy.site
+</a>
+</p>
+
+<hr style="margin:35px 0;">
 
   <!-- ================= VIDEO SECTION ================= -->
   <h2>🎥 Video Guide</h2>
